Fixed overflow of text

--- a/DOM_JIRA/activity/ClassWork/style.css
+++ b/DOM_JIRA/activity/ClassWork/style.css
@@ -84,6 +84,7 @@ body{
     background-color: rgb(240,239,239);
     padding: 2rem;
     display: flex;
+    justify-content: space-evenly;
     /* Commnet below three lines(display, justify-content, align-items) If want to centre modal according to calc */
     /* display: flex;
     justify-content: space-evenly;
@@ -148,6 +149,7 @@ body{
     height:8%;
 }
 .ticket_sub-container{
+    height: 92%;
     padding-left:1rem;
     font-family: sans-serif;
 }
@@ -157,4 +159,6 @@ body{
 .ticket-desc{
     text-align: center;
     height: 70%;  
+    word-break: break-all;
+    overflow: auto;
 }
